# TestCmake

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp
Player/: player.cpp  player.h
